# MoirePy

./: .gitignore  404.html  CITATION.cff  Cargo.toml  LICENSE  README.md  TODO.md  contributing.md  index.html  mkdocs.yml  mkdocs_hooks.py  objects.inv  publish_docs.sh  pyproject.toml  refs.bib  requirements.txt  requirements_dev.txt  requirements_mkdocs.txt  search.html  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: benchmark_submission.yml
.github/workflows/: deploy_docs.yaml  pypi_publish.yaml  tests.yaml  tests.yml
angle_calculation_details/: index.html
angle_calculation_process/: index.html
api/: index.html
api/layers/: index.html
api/moire/: index.html
api/utils/: index.html
assets/: logo.graphite  style.css
benchmark/: benchmark.py
benchmark/i3_gen4/: benchmark_results.json
benchmark/pi5/: benchmark_results.json
benchmark_contribution/: index.html
benchmarks/: index.html
docs/: angle_calculation_details.md  angle_calculation_process.md  benchmark_contribution.md  benchmarks.md  examples.md  find_theta.md  getting_started.md  index.md  index_.md  installation.md  replications.md  tight_binding_ham.md
docs/api/: index.md  layers.md  moire.md  utils.md
docs/assets/: replications.css  style.css
docs/benchmark/: plot.py  plot_i5_gen12.sh
docs/benchmark/i5_gen12/: benchmark_results.json
docs/benchmark/pi5/: benchmark_results.json
docs/examples/: Koshino.ipynb  Tight_binding_Ham.ipynb  angle_calculation.ipynb  dos_calculation.ipynb  k_space_ham.ipynb  nori.ipynb  tight_binding_ham.ipynb
docs/getting_started/: custom_hoppings.ipynb  gs_intro.md  installation.md  k_space_hamiltonian.ipynb  k_space_hamiltonian.md  moire_lattice_and_hamiltonian.md  multiple_orbitals.ipynb  negf.md  non_hermitian.ipynb  obc_vs_pbc.ipynb  obc_vs_pbc.md  prepare_layers.md  quickstart_tbg.ipynb  quickstart_tbg.md
docs/images/getting_started/k_space_hamiltonian/: k_space_hamiltonian.ipynb
docs/images/getting_started/prepare_layers/: gen.ipynb  getting_started.ipynb
docs/images/getting_started/quickstart_tbg/: quickstart_tbg.ipynb
docs/images/theory/angle_calculation_process/: gen.ipynb
docs/replications/: koshino.ipynb  nori.ipynb
docs/routine/: pop.py
docs/theory/: DoS_Calculation.ipynb  angle_calculation_process.md  avc.md  search_algorithm_kdtree.md  theory_intro.md  tight_binding_ham.md
docs/theory/avc-wasm/: .gitignore  Cargo.toml
docs/theory/avc-wasm/pkg/: avc_wasm.js  avc_wasm_bg.wasm.d.ts
examples/: DoS_Calculation.ipynb  Jabed_Moire.ipynb  a.ipynb  angle_calculation.ipynb  dos_calculation.ipynb  effective H.ipynb  example.ipynb  getting_started.ipynb  index.html  k_space_ham.ipynb  tight_binding_ham.ipynb
examples/Tight_binding_Ham/: index.html
examples/angle_calculation/: index.html
examples/dos_calculation/: index.html
examples/k_space_ham/: index.html
examples/tight_binding_ham/: index.html
find theta/: index.html  styles.css
find_theta/: index.html  script.js
getting_started/: custom_hoppings.ipynb  index.html  k_space_hamiltonian.ipynb  multiple_orbitals.ipynb  obc_vs_pbc.ipynb  prepare_layers.ipynb
getting_started/custom_hoppings/: index.html
getting_started/gs_intro/: index.html
getting_started/installation/: index.html
getting_started/k_space_hamiltonian/: index.html
getting_started/moire_lattice_and_hamiltonian/: index.html
getting_started/multiple_orbitals/: index.html
getting_started/negf/: index.html
getting_started/non_hermitian/: index.html
getting_started/obc_vs_pbc/: index.html
getting_started/prepare_layers/: index.html
getting_started/quickstart_tbg/: index.html
getting_started/tight_binding_ham/: index.html
images/angle_calculation_process/: gen copy.ipynb  gen.ipynb
images/angle_calculation_process/gen copy/: index.html
images/getting_started/obc_vs_pbc/: obc_vs_pbc.ipynb
images/theory/angle_calculation_process/: moire.tex
images/theory/search_algorithm_kdtree/: main.ipynb
index_/: index.html
installation/: index.html
layers/: index.html
moirepy/: Jabed_Moire.ipynb  __init__.py  a.py  kpm.py  layers.py  layers_actual.py  layers_vis.py  main.py  moire.py  possible_theta.py  test.ipynb  test.py  utils.py
moirepy/src/: layers.rs  lib.rs  moire.rs  utils.rs
paper/: paper.bib  paper.md
paper/benchmark/: benchmark.py  benchmark_results.json  plot.py  utils.py
replications/: index.html  koshino.ipynb  nori.ipynb
replications/koshino/: index.html
replications/nori/: index.html
search/: search_index.json
tests/: conftest.py  nori.py  test_quickstart_tbg.py
tests/data/: meta.json
theory/angle_calculation_process/: index.html
theory/avc/: index.html
theory/avc-wasm/: avc.rs
theory/avc-wasm/pkg/: avc_wasm.d.ts  avc_wasm_bg.wasm  package.json
theory/search_algorithm_kdtree/: index.html
theory/theory_intro/: index.html
theory/tight_binding_ham/: index.html
tight_binding_ham/: index.html
