[package]
name = "moirepy-rust"
version = "0.1.0"  # this needs to be in L3, don't move it, hardcoded in .github/workflows/pypi_publish.yaml
edition = "2021"

[lib]
# This name must match tool.maturin.module-name in pyproject.toml
# except the module-name includes the package prefix
name = "_rust"
crate-type = ["cdylib"]
path = "moirepy/src/lib.rs"

[dependencies]
# extension-module: required for building a python extension
# abi3-py312: allows the binary to work on future python versions without recompiling
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py312"] }

# numpy: allows zero-copy sharing of arrays between Rust and Python
numpy = "0.23.0" 

# kiddo: high-performance KD-Tree for neighbor searching
kiddo = "4.2.0"