[package]
name = "moirepy-rust"
version = "0.1.0"  # this needs to be in L3, don't move it, hardcoded in .github/workflows/pypi_publish.yaml
edition = "2021"

[lib]
# This name must match tool.maturin.module-name in pyproject.toml
# except the module-name includes the package prefix
name = "moirepy_rust"
crate-type = ["cdylib"]
path = "moirepy/src/lib.rs"

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py312", "num-complex"] }
numpy = "0.23.0"
kiddo = "5.2.0"
ndarray = "0.16.0"
num-complex = "0.4"
