[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "moirepy"
description = "Simulate moire systems, generate hamiltonian in both real and momentum space and calculate various related observables."
authors = [
    { name = "Aritra Mukhopadhyay", email = "amukherjeeniser@gmail.com" },
    { name = "Jabed Umar", email = "jabedumar12@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "python", "moire", "moiré", "moire lattice", "twistronics",
    "bilayer graphene", "tight binding", "lattice simulation",
    "physics", "material science", "condensed matter", "k-space", "real-space"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]   
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
    "testbook",
    "ipykernel",
    "maturin",
]
docs = [
    "notebook",
    "mkdocstrings",
    "mkdocstrings-python",
    # "mkdocs-jupyter",
    "mkdocs-bibtex",
    "mkdocs-material",
    # "mkdocs-kpn",
    # "mkdocs-terminal",
]

[project.urls]
"Documentation" = "https://jabed-umar.github.io/MoirePy/"
"Source Code" = "https://github.com/jabed-umar/MoirePy"
"Bug Tracker" = "https://github.com/jabed-umar/MoirePy/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
addopts = "--import-mode=append"

[tool.maturin]
module-name = "moirepy.moirepy_rust"
features = ["pyo3/extension-module"]
